# irs_final_ws

./: .gitignore  README.md  rebuild.sh
src/hs_robot_system/: package.xml  setup.cfg  setup.py
src/hs_robot_system/hs_robot_system/config/: pa_nav2_params.yaml  pa_slam_params.yaml
src/hs_robot_system/hs_robot_system/launch/: hs_robot_system.launch.py
src/hs_robot_system/hs_robot_system/nodes/: arm_manager.py  arm_manager.py.old_copy  nav_controller.py  plc_location_service.py  robot_state_service.py  workflow_manager.py
src/hs_robot_system/launch/: hs_nav_system.launch.py  hs_robot_system.launch.py
src/hs_robot_system/map/: pa_warehouse_map_02.pgm  pa_warehouse_map_02.yaml
src/hs_robot_system/rviz/: pa_rviz_nav2.rviz
src/hs_robot_system_interfaces/: CMakeLists.txt  package.xml
src/hs_robot_system_interfaces/action/: ArmTask.action  NavigateTask.action
src/hs_robot_system_interfaces/srv/: MoveTo.srv  PLCLocation.srv  RobotState.srv
