<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hs_robot_system_interfaces</name>
  <version>0.0.1</version>
  <description>Custom interface definitions for hs_robot_system</description>
  <maintainer email="u3192696@uni.canberra.edu.au">Daniel</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav2_msgs</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>std_srvs</build_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  
  <depend>action_msgs</depend>
  <depend>builtin_interfaces</depend>
  
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
